Update Menu Grooming section

--- a/index.html
+++ b/index.html
@@ -176,9 +176,21 @@
 
   <!-- MENU GROOMING -->
   <section class="card">
-    <h2>Menu Grooming</h2>
-    <p>Menu resmi Central Cat’s — ditampilkan sesuai price list.</p>
-    <p>Detail layanan tidak ditampilkan di halaman ini sesuai permintaan.</p>
+   <h2>Menu Grooming</h2>
+
+<p>
+    Layanan grooming di Central Cat’s disediakan secara profesional dan dilakukan oleh groomer berpengalaman.
+    Seluruh jenis layanan mengikuti <strong>price list resmi Central Cat’s</strong>.
+</p>
+
+<p>
+    Detail paket dan harga lengkap dapat dilihat pada brosur resmi atau dengan menghubungi Customer Service.
+</p>
+
+<p>
+    Kami memastikan setiap kucing ditangani dengan aman, nyaman, dan sesuai kebutuhan grooming-nya.
+</p>
+
   </section>
 
   <!-- INSTAGRAM GALLERY -->
@@ -195,7 +207,7 @@
 
 <footer>
   Customer Service Central Cat's • WhatsApp: <strong>0821-1182-7798</strong><br>
-  © 2025 Central Cat's Grooming
+  © 2025 Central Cat's
 </footer>
 
 <!-- Floating WA -->
