Fix hero image path

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <!-- HERO -->
     <section class="hero" aria-label="Hero: Central Cat's Grooming">
-      <img src="hero.jpg" alt="Grooming Kucing Central Cat's" />
+      <img src="hero-cat.jpeg" alt="Grooming Kucing Central Cat's" class="hero-img" />
       <div class="text">
         <h2>Perawatan kucing profesional, aman & nyaman</h2>
         <p>Booking mudah, groomer berpengalaman, dan layanan lengkap untuk semua jenis kucing.</p>
