--- a/index.html
+++ b/index.html
@@ -1,159 +1,293 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Central Cat's Grooming</title>
-  <meta name="description" content="Layanan grooming kucing profesional & aman di Tangerang. Central Cat's — Yang Berkualitas Ada di Sini!">
-  <meta name="robots" content="index,follow" />
-  <meta property="og:title" content="Central Cat's — Grooming Kucing Profesional" />
-  <meta property="og:description" content="Perawatan kucing aman, profesional, dan nyaman. Booking grooming online Central Cat's Tangerang." />
-  <meta property="og:type" content="website" />
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Central Cat's — Grooming & Petshop Tangerang</title>
+<style>
+/* GLOBAL */
+:root{--accent:#C63E5B;--green:#25D366}
+body{margin:0;font-family:Arial,Helvetica,sans-serif;background:#fff;color:#111;line-height:1.5}
+.container{max-width:1200px;margin:0 auto;padding:0 20px}
+h1,h2,h3,h4{margin:0}
+.muted{color:#6b6b6b}
+.btn-primary{display:inline-block;padding:12px 20px;background:var(--accent);color:#fff;border-radius:10px;text-decoration:none;font-weight:700}
 
-  <style>
-    :root{
-      --accent:#4b8fe2;
-      --wa:#25D366;
-      --muted:#666;
-      --container:1100px;
-      --bg:#f4f4f4;
-    }
-    *{box-sizing:border-box}
-    body{font-family:Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; margin:0; color:#222; background:var(--bg); line-height:1.5}
-    a{color:var(--accent); text-decoration:none}
-    .container{width:92%; max-width:var(--container); margin:0 auto; padding:18px 0}
+/* LAYOUT */
+.section{padding:48px 20px}
+.section-center{max-width:1100px;margin:0 auto}
 
-    /* Header centered logo + brand */
-    header{background:#fff; border-bottom:1px solid #eee; padding:18px 0}
-    .header-center{display:flex; align-items:center; justify-content:center; gap:14px}
-    .site-logo{width:64px;height:64px;object-fit:contain;border-radius:8px;display:inline-block}
-    .brand{text-align:center;line-height:1}
-    .brand h1{margin:0;font-size:28px;font-weight:700;color:#111}
-    .brand .tagline{margin-top:6px;color:var(--muted);font-size:14px}
+/* HERO */
+.hero{display:flex;gap:36px;align-items:center;padding:64px 20px}
+.hero-left h1{font-size:34px;margin-bottom:8px}
+.hero-left p{color:#444;margin-bottom:14px}
+.hero-right img{width:100%;max-width:420px;border-radius:10px;display:block}
 
-    /* Hero */
-    .hero{background:#fff;padding:26px;border-radius:12px;margin-top:20px;display:flex;gap:20px;flex-wrap:wrap;align-items:center;box-shadow:0 6px 18px rgba(0,0,0,0.06)}
-    .hero img{width:260px;border-radius:12px;object-fit:cover}
-    .hero .text{flex:1;min-width:260px}
-    .btn{display:inline-block;padding:12px 22px;border-radius:10px;font-weight:700;margin-right:10px;margin-top:12px;text-decoration:none}
-    .btn-primary{background:var(--accent);color:#fff}
-    .btn-green{background:var(--wa);color:#fff}
+/* ABOUT */
+.about{display:flex;gap:36px;align-items:center;padding:40px 20px}
+.about img{max-width:260px;border-radius:8px}
 
-    /* Cards */
-    .card{background:#fff;padding:20px;border-radius:12px;margin-top:20px;box-shadow:0 6px 18px rgba(0,0,0,0.06)}
-    h2{margin-top:0}
-    ul li{margin-bottom:8px}
+/* VISI MISI */
+.about-vm-grid{display:grid;grid-template-columns:1fr 320px;gap:24px;align-items:start}
 
-    /* Footer */
-    footer{text-align:center;padding:20px;margin-top:40px;font-size:14px;color:#555;background:transparent}
+/* SERVICES */
+.services-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:18px;margin-top:18px}
+.card{background:#fbfbfb;padding:18px;border-radius:12px;box-shadow:0 6px 20px rgba(0,0,0,0.04)}
 
-    /* Floating WA */
-    .wa-float{position:fixed;bottom:22px;right:22px;background:var(--wa);color:#fff;padding:12px 14px;border-radius:50px;text-decoration:none;font-weight:700;box-shadow:0 6px 18px rgba(0,0,0,.18);z-index:999}
-    .wa-float:hover{text-decoration:none;transform:translateY(-2px)}
+/* GALLERY */
+.gallery-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:12px;margin-top:18px}
+.gallery-grid img{width:100%;height:auto;border-radius:12px;object-fit:cover;aspect-ratio:1/1}
 
-    /* Responsive */
-    @media (max-width:760px){
-      .hero img{width:200px}
-      .site-logo{width:48px;height:48px}
-      .brand h1{font-size:20px}
-    }
-  </style>
+/* TESTIMONIAL */
+.testi-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:16px;margin-top:18px}
+
+/* VIDEO */
+.video-flex{display:flex;gap:32px;align-items:center;max-width:1100px;margin:0 auto}
+.video-maskot{max-width:260px}
+.video-embed iframe{width:100%;height:360px;border-radius:12px;border:0;box-shadow:0 8px 28px rgba(0,0,0,0.08)}
+
+/* PRICING */
+.pricing-grid{display:grid;grid-template-columns:repeat(4,1fr);gap:14px;margin-top:16px}
+
+/* CTA WA */
+.cta-wa{background:#fdf3f3;padding:22px;border-radius:12px;margin:32px auto;max-width:1100px}
+.cta-flex{display:flex;justify-content:space-between;align-items:center;gap:12px}
+
+/* LOKASI */
+.lokasi-flex{display:grid;grid-template-columns:1fr 420px;gap:20px;align-items:start}
+
+/* FOOTER */
+.footer-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:18px;max-width:1100px;margin:0 auto;padding:24px 20px;border-top:1px solid #f1f1f1}
+.footer-bottom{text-align:center;color:#777;padding-bottom:18px}
+
+/* RESPONSIVE */
+@media(max-width:900px){
+  .hero,.about,.video-flex{flex-direction:column;text-align:center}
+  .about img{margin:0 auto}
+  .services-grid,.gallery-grid,.testi-grid,.pricing-grid{grid-template-columns:1fr}
+  .about-vm-grid{grid-template-columns:1fr}
+  .lokasi-flex{grid-template-columns:1fr}
+}
+</style>
 </head>
 <body>
 
-  <!-- HEADER: logo + centered brand -->
-  <header>
-    <div class="container">
-      <div class="header-center">
-        <img class="site-logo" src="logo.png" alt="Central Cat's logo" />
-        <div class="brand">
-          <h1>Central Cat's</h1>
-          <div class="tagline">Yang Berkualitas Ada di Sini!</div>
-        </div>
+<!-- HERO -->
+<section class="hero section">
+  <div class="container hero-left">
+    <h1>Central Cat’s — Grooming & Petshop Tangerang</h1>
+    <p>Petshop lengkap + grooming profesional dengan standar kebersihan tinggi. Booking mudah via WhatsApp.</p>
+    <div style="margin-top:12px">
+      <a class="btn-primary" href="https://wa.me/6282111827798" target="_blank">Booking Sekarang</a>
+    </div>
+  </div>
+  <div class="container hero-right" style="max-width:480px">
+    <img src="hero-maskot.png" alt="Maskot Central Cat's">
+  </div>
+</section>
+
+<!-- ABOUT -->
+<section class="about section">
+  <div class="container" style="flex:1">
+    <h2>Apa Itu Central Cat’s?</h2>
+    <p class="muted" style="margin-top:8px">Central Cat’s adalah petshop lengkap yang menyediakan makanan, pasir, vitamin, aksesoris, dan layanan grooming profesional di Tangerang.</p>
+  </div>
+  <div class="container" style="max-width:320px">
+    <img src="maskot-about.png" alt="Maskot Central Cat's">
+  </div>
+</section>
+
+<!-- VISI MISI -->
+<section class="section">
+  <div class="section-center about-vm-grid">
+    <div>
+      <h2>Visi & Misi Central Cat's</h2>
+
+      <div style="margin-top:12px" class="vm-block">
+        <h3>Visi</h3>
+        <p class="muted" style="margin-top:6px">Menjadi pilihan utama bagi pemilik hewan peliharaan dengan menyediakan produk dan layanan berkualitas.</p>
+      </div>
+
+      <div class="vm-block">
+        <h3>Misi</h3>
+        <ul class="vm-list muted" style="margin-top:8px">
+          <li>Menyediakan produk berkualitas tinggi.</li>
+          <li>Memberikan layanan pelanggan unggul.</li>
+          <li>Edukasi pemilik hewan peliharaan.</li>
+          <li>Komitmen pada keberlanjutan.</li>
+          <li>Inovasi berkelanjutan.</li>
+        </ul>
+      </div>
+
+      <div class="vm-block">
+        <h3>Nilai-Nilai Kami</h3>
+        <ul class="vm-values-list muted" style="margin-top:8px">
+          <li>Kualitas & keamanan.</li>
+          <li>Peduli & empati.</li>
+          <li>Transparansi.</li>
+          <li>Inovasi.</li>
+        </ul>
+      </div>
+
+      <div style="margin-top:12px">
+        <a class="btn-primary" href="https://wa.me/6282111827798" target="_blank">Tanya Admin</a>
       </div>
     </div>
-  </header>
 
-  <main class="container">
-
-    <!-- HERO -->
-    <section class="hero" aria-label="Hero: Central Cat's Grooming">
-      <img src="hero-cat.jpeg" alt="Grooming Kucing Central Cat's" class="hero-img" />
-      <div class="text">
-        <h2>Perawatan kucing profesional, aman & nyaman</h2>
-        <p>Booking mudah, groomer berpengalaman, dan layanan lengkap untuk semua jenis kucing.</p>
-
-        <a class="btn btn-primary"
-           href="https://docs.google.com/forms/d/e/1FAIpQLSc1JyC-PvP0J13kGJ3--x-R8D_iJgvGHwBVEZvVSpM476MPNw/viewform"
-           target="_blank" rel="noopener">Reservasi Grooming</a>
-
-        <a class="btn btn-green"
-           href="https://wa.me/6282111827798?text=Halo%20Central%20Cat's,%20saya%20ingin%20bertanya%20tentang%20grooming."
-           target="_blank" rel="noopener">Chat WhatsApp</a>
-      </div>
-    </section>
-
-    <!-- VISI MISI -->
-    <section class="card" id="about" aria-labelledby="visi-misi">
-      <h2 id="visi-misi">Visi</h2>
-      <p><em>Menjadi pilihan utama bagi pemilik hewan peliharaan dengan menyediakan produk dan layanan berkualitas yang mendukung kesejahteraan, kebahagiaan, dan kesehatan hewan peliharaan di seluruh Indonesia.</em></p>
-
-      <h3>Misi</h3>
-      <ul>
-        <li><strong>Produk Berkualitas Tinggi:</strong> Menawarkan produk aman & terbaik untuk kesehatan hewan.</li>
-        <li><strong>Layanan Pelanggan Unggul:</strong> Pelayanan cepat, ramah, dan membantu setiap kebutuhan.</li>
-        <li><strong>Edukasi Pemilik Hewan:</strong> Memberikan informasi penting tentang kesehatan dan perawatan kucing.</li>
-        <li><strong>Fokus Kesejahteraan Hewan:</strong> Menjaga kesehatan & kenyamanan kucing dalam setiap layanan.</li>
-        <li><strong>Etika & Keberlanjutan:</strong> Praktik yang ramah lingkungan dan etis.</li>
-        <li><strong>Inovasi:</strong> Mengembangkan layanan yang relevan & modern.</li>
-      </ul>
-
-      <h3>Nilai Kami</h3>
-      <ul>
-        <li><strong>Kualitas & Keamanan:</strong> Prioritas utama kami.</li>
-        <li><strong>Peduli & Empati:</strong> Perlakuan penuh kasih kepada setiap hewan.</li>
-        <li><strong>Transparansi:</strong> Kejujuran dalam setiap layanan & informasi.</li>
-        <li><strong>Inovasi Berkelanjutan:</strong> Selalu berkembang mengikuti kebutuhan pelanggan.</li>
-      </ul>
-    </section>
-
-    <!-- MENU GROOMING (revisi) -->
-    <section class="card" id="services" aria-labelledby="menu-grooming">
-      <h2 id="menu-grooming">Menu Grooming</h2>
-
-      <p>
-        Layanan grooming di Central Cat’s disediakan secara profesional dan dilakukan oleh groomer berpengalaman.
-        Seluruh jenis layanan mengikuti <strong>price list resmi Central Cat’s</strong>.
-      </p>
-
-      <p>
-        Detail paket dan harga lengkap dapat dilihat pada brosur resmi atau dengan menghubungi Customer Service.
-      </p>
-
-      <p>
-        Kami memastikan setiap kucing ditangani dengan aman, nyaman, dan sesuai kebutuhan grooming-nya.
-      </p>
-    </section>
-
-    <!-- GALERI INSTAGRAM -->
-    <section class="card" aria-labelledby="galeri">
-      <h2 id="galeri">Galeri Grooming</h2>
-      <p>Lihat hasil grooming kucing di Instagram resmi kami.</p>
-
-      <iframe src="https://www.instagram.com/central.catgrooming/embed" width="100%" height="480" frameborder="0" title="Central Cat's Instagram"></iframe>
-    </section>
-
-  </main>
-
-  <footer>
-    <div class="container">
-      Customer Service Central Cat's • WhatsApp: <strong>0821-1182-7798</strong><br>
-      © 2025 Central Cat's Grooming
+    <div>
+      <img src="maskot-about.png" alt="Maskot Central Cat's" style="width:100%;max-width:300px;border-radius:10px;display:block;margin:0 auto">
     </div>
-  </footer>
+  </div>
+</section>
 
-  <!-- Floating WA button -->
-  <a class="wa-float" href="https://wa.me/6282111827798?text=Halo%20Central%20Cat's,%20saya%20ingin%20bertanya." target="_blank" rel="noopener" aria-label="Chat WhatsApp">WA</a>
+<!-- SERVICES -->
+<section class="section">
+  <div class="section-center">
+    <h2 class="section-title">Layanan Kami</h2>
+    <div class="services-grid" style="margin-top:18px">
+      <div class="card">Grooming Kucing</div>
+      <div class="card">Petshop</div>
+      <div class="card">Antar Jemput</div>
+    </div>
+  </div>
+</section>
 
+<!-- GALLERY INTRO -->
+<section class="section" style="padding-top:30px;padding-bottom:30px">
+  <div class="section-center" style="display:flex;align-items:center;gap:20px;flex-wrap:wrap">
+    <img src="maskot-mandi.png" alt="Maskot mandi" style="max-width:220px;border-radius:10px">
+    <div>
+      <h2>Lihat Hasil Grooming</h2>
+      <p class="muted" style="margin-top:6px">Kumpulan before photos hasil grooming. (After photo akan ditambahkan kemudian.)</p>
+      <div style="margin-top:10px"><a class="btn-primary" href="#gallery">See Gallery</a></div>
+    </div>
+  </div>
+</section>
+
+<!-- GALLERY -->
+<section id="gallery" class="section gallery-section">
+  <div class="section-center">
+    <h2 class="section-title">Gallery Grooming</h2>
+    <div class="gallery-grid">
+      <img src="groom-white-before.png" alt="Groom white before">
+      <img src="groom-white-before.png" alt="Groom white before duplicate">
+      <img src="groom-orange-before.png" alt="Groom orange before">
+      <img src="groom-orange-before.png" alt="Groom orange before duplicate">
+      <img src="groom-cream-before.png" alt="Groom cream before">
+      <img src="groom-cream-before.png" alt="Groom cream before duplicate">
+    </div>
+  </div>
+</section>
+
+<!-- TESTIMONIAL -->
+<section class="section testimonial">
+  <div class="section-center">
+    <h2 class="section-title">Testimoni Pelanggan</h2>
+    <div class="testi-grid">
+      <div class="card">“Pelayanan memuaskan. Susah nyari jasa grooming yang mau nerima kucing agresif, untungnya di sini bisa. Terima kasih!”</div>
+      <div class="card">“Best dah pokoknya, bisa antar jemput anabul. Pelayanan juga oke, admin bintang 5.”</div>
+      <div class="card">“Bintang 5 pokoknya semua pertanyaan bakal dijawab sama kakak nya dan dikasi tau masalah dan solusinya.”</div>
+    </div>
+  </div>
+</section>
+
+<!-- VIDEO -->
+<section class="section videos-section">
+  <div class="video-flex">
+    <img src="maskot-megaphone.png" alt="Maskot megaphone" class="video-maskot">
+    <div style="flex:1">
+      <h2>Kulik Yuk!</h2>
+      <p class="muted" style="margin-top:6px">Video terbaru dari Central Cat’s.</p>
+      <div class="video-embed" style="margin-top:12px">
+        <iframe src="https://www.youtube.com/embed?listType=user_uploads&list=central_cats" frameborder="0" allowfullscreen></iframe>
+      </div>
+      <div style="margin-top:12px"><a class="btn-sub" href="https://www.youtube.com/@central_cats" target="_blank">Kunjungi Channel ▶️</a></div>
+    </div>
+  </div>
+</section>
+
+<!-- PRICING -->
+<section class="section pricing-section">
+  <div class="section-center">
+    <h2 class="section-title">Paket Grooming</h2>
+    <p class="muted" style="margin-top:6px">Untuk detail harga silakan chat admin.</p>
+    <div class="pricing-grid">
+      <div class="card">
+        <h4>Daily Grooming</h4>
+        <p class="muted">Potong kuku, telinga, 2-step shampoo.</p>
+      </div>
+      <div class="card">
+        <h4>Beauty Grooming</h4>
+        <p class="muted">Premium shampoo + perapihan bulu.</p>
+      </div>
+      <div class="card">
+        <h4>Grooming Jamur</h4>
+        <p class="muted">Shampoo jamur + cleansing.</p>
+      </div>
+      <div class="card">
+        <h4>Treatment Kutu</h4>
+        <p class="muted">Protokol 3 hari.</p>
+      </div>
+    </div>
+    <div style="text-align:center;margin-top:16px">
+      <a class="btn-primary" href="https://wa.me/6282111827798" target="_blank">Tanyakan Detail Harga</a>
+    </div>
+  </div>
+</section>
+
+<!-- CTA WA -->
+<section class="section">
+  <div class="cta-wa">
+    <div class="cta-flex">
+      <div>
+        <h3>Butuh cepat? Booking via WhatsApp</h3>
+        <p class="muted">Langsung chat admin untuk konfirmasi jadwal.</p>
+      </div>
+      <div><a class="wa-btn" href="https://wa.me/6282111827798" target="_blank">Chat Admin</a></div>
+    </div>
+  </div>
+</section>
+
+<!-- LOKASI -->
+<section class="section lokasi-section">
+  <div class="section-center lokasi-flex">
+    <div>
+      <h2>Lokasi & Jam Buka</h2>
+      <p class="muted">Buka Google Maps untuk melihat rute dan jam operasional.</p>
+      <div class="card" style="margin-top:12px">
+        <p><strong>Toko:</strong> 08.00–21.00</p>
+        <p><strong>Grooming:</strong> 08.00–17.00</p>
+        <p><strong>Online:</strong> 09.00–17.00</p>
+        <div style="margin-top:10px"><a class="btn-map" href="https://www.google.com/maps?q=Central+Cat%27s+Grooming+Tangerang" target="_blank">Buka Google Maps</a></div>
+      </div>
+    </div>
+    <div>
+      <iframe src="https://www.google.com/maps?q=Central+Cat%27s+Grooming+Tangerang&output=embed" width="100%" height="320" style="border-radius:10px;border:0"></iframe>
+    </div>
+  </div>
+</section>
+
+<!-- FOOTER -->
+<footer class="site-footer">
+  <div class="footer-grid">
+    <div>
+      <strong>CENTRAL CAT'S</strong>
+      <p class="muted">Petshop • Grooming • Aksesoris</p>
+    </div>
+    <div>
+      <h4>Kontak</h4>
+      <p class="muted">WA: <a href="https://wa.me/6282111827798">0821-1182-7798</a></p>
+      <p class="muted">Email: admin@central-cats.com</p>
+    </div>
+    <div>
+      <h4>Jam Operasional</h4>
+      <p class="muted">Toko: 08.00–21.00</p>
+      <p class="muted">Grooming: 08.00–17.00</p>
+    </div>
+  </div>
+  <div class="footer-bottom">© <span id="year"></span> Central Cat's. All rights reserved.</div>
+</footer>
+
+<script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
