--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ background:var(--bg);color:#111;line-height:1.5}
   </div>
 
   <div class="hero-right">
-    <img class="maskot" src="assets maskot/hero-maskot_transparent.png">
+    <img class="maskot" src="assets/maskot/hero-maskot_transparent.png" alt="Maskot Central Cat's">
   </div>
 </section>
 
@@ -151,7 +151,7 @@ background:var(--bg);color:#111;line-height:1.5}
 
   <div class="features">
     <div class="feature">
-      <img src="assets maskot/maskot-about_transparent.png" style="width:64px;height:64px">
+      <img src="assets/maskot/maskot-about_transparent.png" style="width:64px;height:64px">
       <h4>One-stop Petshop</h4>
       <p style="color:var(--muted)">Produk lengkap: makanan, pasir, vitamin, perlengkapan.</p>
     </div>
@@ -248,7 +248,7 @@ background:var(--bg);color:#111;line-height:1.5}
 <section class="section">
   <div class="media-row">
     <div class="media-embed" style="flex:1">
-      <iframe src="https://www.youtube.com/embed?listType=user_uploads&list=central_cats"></iframe>
+      <iframe src="https://www.youtube.com/embed/VIDEO_ID" allowfullscreen></iframe>
     </div>
 
     <div>
